# ckan-client

./: package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
ckanapi/: Cargo.toml  README.md
ckanapi/src/: ckan.rs  lib.rs
fdp/: Cargo.toml
fdp/src/: action.rs  lib.rs  state.rs  types.rs
fdp/src/types/: source.rs
src/: App.svelte  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ckan.rs  commands.rs  main.rs
src/lib/component/: Dataset.svelte  DatasetErrors.svelte  DatasetsProgress.svelte  Manual.svelte  NiceMetadata.svelte  Resource.svelte  Upload.svelte  Uploads.svelte  index.ts
src/lib/layout/: Body.svelte  Footer.svelte  Header.svelte  Navigation.svelte  index.ts
src/lib/page/: Datasets.svelte  Home.svelte  Project.svelte  Source.svelte  Submission.svelte  Uploading.svelte  Uploads.svelte  UserForm.svelte  index.ts
src/services/: flakes.ts  index.ts  manual.ts  portal.ts  project.ts  queue.ts  source.ts  step.ts  storage.ts  submission.ts  tauri.ts  theme.ts  toaster.ts  user.ts
src/styles/: fonts.scss  styles.css  styles.scss
src/types/: index.ts
