[package]
name = "ckanapi"
version = "0.1.2"
edition = "2021"
description = "API client for CKAN data portals"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11.10", features = ["multipart", "blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["macros"] }

[dev-dependencies]
env_logger = "0.9.0"

[lib]
doctest = false