[package]
name = "fdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
ckanapi = { version = "0.1.1", path = "../ckanapi" }
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"

[dev-dependencies]
pretty_assertions = "1.2.1"
tempfile = "3.3.0"
tokio = "1.19.2"
